# pqr

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: grid_search.ipynb  multifactors.ipynb  quickstart.ipynb  scaling.ipynb
pqr/: __init__.py  allocation.py  evaluation.py  factor.py  holdings.py  picking.py  returns.py  signals.py  utils.py
