[tool.poetry]
name = "pqr"
version = "1.0.0"
description = ""
authors = ["Andrey Babkin <andrey.babkin.ru71@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
